added latest deals section to body

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
                 <div class="pt-[18px] lg:pl-[40px] lg:pt-[10px] lg:pb-[38px]">
                     <h1 class="font-[noto-serif] text-[24px] lg:text-[50px] font-bold text-[#000000]">Flower & Plants Lover</h1>
-                <ul class="list-disc pl-8 lg:pl-[20px]">
+                <ul class="font-[inter] text-[#555353] list-disc pl-8 lg:pl-[20px]">
                     <li class="pt-10 lg:pt-10"><a href="">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</a></li>
                     <li class="pt-10 lg:pt-10"><a href="">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</a></li>
                     <li class="pt-10 lg:pt-10"><a href="">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</a></li>
@@ -134,7 +134,10 @@
          </div>
 
          <!-- latest deals -->
-          
+          <div class="lg:bg-[#f6ffa7] text-center mt-[143px] pl-[28px] pr-[28px] lg:mt-[133px] lg:pl-[276px] lg:pr-[276px]">
+            <h1 class="font-noto-serif text-[#000000] font-bold lg:text-[50px]"><span class="text-[#E95A08]">Latest</span> Deals</h1>
+            <p class="text-[inter] font-normal pt-[16px] text-[14px] lg:text-[22px] lg:pt-8">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+          </div>
         
     </main>
 
